clean up files, enable right click forging on the table block, disable anvil reforge.